[workspace]
members = [
    "netsody-p2p",
    "netsody-agent",
    "netsody-sp",
    "netsody-bench",
    "netsody-ui"
]
resolver = "3"

[workspace.dependencies]
tracing = { version = "0.1.41"}
tracing-subscriber = { version = "0.3.20", default-features = false, features = ["env-filter", "fmt", "ansi", "time", "local-time"] }
tokio = { version = "1.47.1", features = ["rt-multi-thread", "net", "time", "macros", "sync", "process"] }
tokio-util = "0.7.16"
ahash = "0.8.12"
thiserror = "2.0.17"
serde = { version = "1.0", features = ["derive"] }
derive_builder = "0.20.2"
papaya = "0.2.3"
lazy_static = "1.5.0"
hyper = { version = "1.7" }
hyper-util = { version = "0.1.17" }
bytes = "1.10.1"
arc-swap = "1.7.1"
futures = "0.3.31"
prometheus = { version = "0.14.0", default-features = false }
url = { version = "2.5.7" }
if-addrs = "0.14.0"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
debug = false
incremental = false
