[package]
name = "drasyl-agent"
version = "0.1.0"
edition = "2024"

[build-dependencies]
vergen-git2 = { version = "1.0.0", features = ["build", "cargo"] }

[dependencies]
p2p = { package = "drasyl-p2p", path = "../drasyl-p2p", features = ["serde"] }
tracing = { workspace = true }
tracing-subscriber  = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
serde = { workspace = true }
ahash = { workspace = true }
thiserror = { workspace = true }
tun-rs = { version = "2.7.2", features = ["async"] }
hyper = { workspace = true, features = ["client", "http1"] }
bytes = { workspace = true }
hyper-util = { workspace = true, features = ["http1", "client"] }
arc-swap = { workspace = true }
futures = { workspace = true }
hyper-rustls = { version = "0.27.7", default-features = false, features = ["webpki-roots", "ring", "tls12", "http1"] }
etherparse = "0.19.0"
flume = { version = "0.11.1", default-features = false, features = ["async"] }
ipnet = { version = "2.11.0", features = ["serde"] }
ipnet-trie = "0.3.0"
toml = "0.9.5"
clap = { version = "4.5.46", features = ["derive"] }
http-body-util = "0.1"
http = "1.3.1"
url = { version = "2.5.7", features = ["serde"] }
base64 = "0.22.1"
axum = "0.8.4"
headers = "0.4.1"
serde_json = "1.0.143"
axum-extra = { version = "0.10.1", features = ["typed-header"] }
chrono = { version = "0.4" }
humantime = "2.2.0"
cfg-if = "1.0.3"

[target."cfg(target_os = \"windows\")".dependencies]
net-route = "0.4.6"
windows-service = "0.8.0"

[target."cfg(target_os = \"macos\")".dependencies]
net-route = "0.4.6"
hickory-proto = "0.25.2"
hickory-server = "0.25.2"
async-trait = "0.1.88"

[target."cfg(target_os = \"linux\")".dependencies]
net-route = "0.4.6"

[target."cfg(target_os = \"ios\")".dependencies]
hickory-proto = "0.25.2"
hickory-server = "0.25.2"
async-trait = "0.1.88"

[features]
ffi = []
dns = []
prometheus = ["p2p/prometheus"]

[lib]
crate-type = ["rlib", "staticlib"]

[[bin]]
name = "drasyl"
path = "src/main.rs"
