[package]
name = "drasyl-bench"
version = "0.1.0"
edition = "2024"

[dependencies]
drasyl = { path = "../drasyl" }
env_logger = "0.11.8"
tokio = "1.44.2"
log = "0.4.27"
anyhow = "1.0.98"
iroh = { version = "0.34" }
iroh-base = { version = "0.34", features = ["ticket"] }
rand = "0.8.5"
tracing-subscriber = "0.3.19"
tracing = "0.1.41"
