[package]
name = "drasyl-bench"
version = "0.1.0"
edition = "2024"

[dependencies]
drasyl = { path = "../drasyl" }
tokio = { workspace = true }
tracing-subscriber  = { workspace = true }
tracing = { workspace = true }
iroh = { version = "0.34" }
iroh-base = { version = "0.34", features = ["ticket"] }
rand = "0.9.1"

[[bin]]
name = "bench-drasyl"
path = "src/bin/drasyl.rs"

[[bin]]
name = "bench-iroh"
path = "src/bin/iroh.rs"