[package]
name = "drasyl-sdn"
version = "0.1.0"
edition = "2024"

[dependencies]
drasyl = { path = "../drasyl", features = ["serde"] }
tracing = { workspace = true }
tracing-subscriber  = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
serde = { workspace = true }
ahash = { workspace = true }
thiserror = { workspace = true }
tun-rs = { version = "2", features = ["async"] }
hyper = { workspace = true, features = ["client", "http1"] }
bytes = { workspace = true }
hyper-util = { workspace = true, features = ["http1", "client"] }
arc-swap = { workspace = true }
futures = { workspace = true }
hyper-rustls = { version = "0.27.5", features = ["webpki-roots"] }
etherparse = "0.17.0"
flume = { version = "0.11.1", default-features = false, features = ["async"] }
ipnet = { version = "2.11.0", features = ["serde"] }
net-route = "0.4.6"
ipnet-trie = "0.3.0"
toml = "0.8.20"
clap = { version = "4.5.37", features = ["derive"] }
http-body-util = "0.1"
http = "1.3.1"
url = "2.5.0"
base64 = "0.21.7"
axum = "0.8.4"
headers = "0.4.0"
serde_json = "1.0.140"
axum-extra = { version = "0.10.1", features = ["typed-header"] }
chrono = { version = "0.4" }
humantime = "2.2.0"

[features]
dns = []
prometheus = ["drasyl/prometheus"]

[[bin]]
name = "drasyl"
path = "src/main.rs"
