[package]
name = "drasyl-sp"
version = "0.1.0"
edition = "2024"

[dependencies]
drasyl = { path = "../drasyl", features = ["serde"] }
tracing = { workspace = true }
tracing-subscriber  = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
ahash = { workspace = true }
thiserror = { workspace = true }
derive_builder = { workspace = true }
papaya = { workspace = true }
lazy_static = { workspace = true }
bytes = { workspace = true }
hyper = { workspace = true, features = ["server", "http1"], optional = true }
hyper-util = { workspace = true, features = ["tokio"], optional = true }
arc-swap = { workspace = true }
futures = { workspace = true }
prometheus = { workspace = true, default-features = false, optional = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["async_tokio", "html_reports"] }

[[bench]]
name = "super_peer"
harness = false

[features]
prometheus = ["dep:hyper", "dep:prometheus", "dep:hyper-util"]