[package]
name = "drasyl-ui"
version = "0.1.0"
edition = "2024"

[dependencies]
drasyl-sdn = { path = "../drasyl-sdn" }
tracing = { workspace = true }
tracing-subscriber  = { workspace = true }
tokio = { workspace = true }
tray-icon = "0.20.1"
image = "0.25.6"
winit = "0.30.11"
arboard = "3.3.0"

[target."cfg(target_os = \"macos\")".dependencies]
objc2-core-foundation = { version = "0.3.0", default-features = false, features = [
    "std",
    "CFRunLoop",
] }

[target."cfg(target_os = \"linux\")".dependencies]
gtk = "0.18"