[package]
name = "drasyl-ui"
version = "0.1.0"
edition = "2024"

[build-dependencies]
vergen-git2 = { version = "1.0.0" }

[dependencies]
drasyl-sdn = { path = "../drasyl-sdn" }
tracing = { workspace = true }
tracing-subscriber  = { workspace = true }
tokio = { workspace = true }
url = { workspace = true }
tray-icon = "0.21.0"
image = "0.25.6"
glow = "0.16.0"
winit = "0.30.11"
glutin = "0.32.3"
glutin-winit = "0.5.0"
egui = "0.32.0"
egui_glow = { version = "0.32.0", features = ["winit", "clipboard"] }
arboard = "3.3.0"
webbrowser = "1.0.5"

[target."cfg(target_os = \"macos\")".dependencies]
objc2-core-foundation = { version = "0.3.0", default-features = false, features = [
    "std",
    "CFRunLoop",
] }

[target."cfg(target_os = \"linux\")".dependencies]
gtk = "0.18"